# GUI-and-other-Codes

./: README.md  RPi_data.py  aditya.py  airview.jnlp  analogcams.py  auto_traversal.py  ball_search.py  ballsearch2.py  cam10.py  cam9.py  camera.py  compass.py  gui.py  gui2.py  hydraprobe.py  imgui.ini  joystick_display.py  keyboard.py  maps.py  math  mrm.py  pyqt.py  s2.py  sendata.py  serial  tcp_rec.py  tcp_send.py  tcp_send_science.py  test.py  test.ui  udp.py  udp_recieve.py  untitled.ui
CN Lab Project/: cam_client.py  server.py
DyCalibResult/827112071114/DC15/: log.txt
DyCalibResult/827112071114/DC19/: log.txt
DyCalibResult/827112071114/DC20/: log.txt
DyCalibResult/827112071114/DC23/: log.txt
DyCalibResult/827112071114/DC6/: log.txt
GUI/: RPi_data.py  acam1.py  axis_1.py  axis_2.py  axis_3.py  axis_4.py  cam8.py  camera.ui  endlat.txt  endlon.txt  gui.py  gui1.py  joystickthread.py  tcp_send.py  test.py  test.ui
Realsense/hello_rs/: CMakeLists.txt
Realsense/hello_rs/src/: main.cpp
